ordre d'affichage des volumes -avant: préférences -après: series année en cours, -1, TOTAL